# examine-sql

./: README.md  pyproject.toml  s
doc/: debug-structure.txt
ref/: examine-sql.sh
scripts/: examine-sql
src/examine_sql/: __main__.py  clear.py  context.py  core.py  main.py  names.py
tests/: test_main.py
